Add support for repository management and enhance security
- Introduced `RepositoryEntity`, service, and repository layers for managing repositories.
- Implemented access control based on repository visibility (public, private, hidden).
- Added support for deploy tokens with granular permissions (e.g., READ, WRITE).
- Enhanced `JwtAuthenticationFilter` to handle both JWT and Basic authentication.
- Improved global exception handling with new exceptions and logging.
- Switched storage to local file system with a new `FileSystemStorageProvider`.
- Updated security configuration to include better access control and anonymous user handling.
- Added integration tests for repository access and authentication logic.
- Refactored existing code for greater clarity and modularity.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 500MB # Adjust based on your needs
+      max-request-size: 500MB
   application:
     name: KRepo
 
@@ -9,11 +14,14 @@ krepo:
       secret-key: "${JWT_SECRET:very-long-secret-key-that-is-at-least-thirty-two-characters-long}"
       expiration-ms: 3600000 # 1 hour
   storage:
-    type: s3
-    s3:
-      bucket: my-repo-bucket
-      region: eu-central-1
-      access-key: "YOUR_KEY"
-      secret-key: "YOUR_SECRET"
+    type: fs # Change from s3 to fs for local testing
+    fs:
+      path: "./data/repositories"
+    #type: s3
+    #s3:
+      #bucket: my-repo-bucket
+      #region: eu-central-1
+      #access-key: "YOUR_KEY"
+      #secret-key: "YOUR_SECRET"
       # endpoint: "http://localhost:9000" # If using MinIO
       # path-style-access: true # If using MinIO
