--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ krepo:
       secret-key: "${JWT_SECRET:very-long-secret-key-that-is-at-least-thirty-two-characters-long}"
       expiration-ms: 3600000 # 1 hour
   storage:
-    type: fs # Change from s3 to fs for local testing
+    type: fs
     fs:
       path: "./data/repositories"
     #type: s3
